    * 4069 FIX: cmciii.phase: Fixed broken check with some devices...
    * 4092 FIX: if.include: fixed wrong calculated number of interfaces which are up in case of interface groups
    * 4093 FIX: oracle_tablespaces: Werk 3907 broke the space calculation...

    Multisite:
    * 4070 Added a painter for the service check period
    * 3974 FIX: Sorting comments in hover menu of comments icon by time now
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
    * 4046 FIX: Repaired html rendering....
    * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...
    * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page
    * 3981 FIX: Views: Fixed context button displaying depending on usage
    * 4071 FIX: Removed notes_url from "LOG *" logwatch services...
    * 4072 FIX: Fixed multiple issues in BI availability when groups or names contain umlauts

    WATO:
    * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...
    * 4044 Display host/service notification delay with d/h/m/s, not with fractions of minute
    * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
    * 4041 FIX: Fix exception when editing global configuration settings...
    * 3975 FIX: Improved error handling when trying to edit not existing global setting
    * 3976 FIX: Fixed broken link in LDAP automatic sync help text
    * 3977 FIX: Fixed poping up changes button in sidebar snapin after a change
    * 3982 FIX: Some MKPs created with WATO could not be uploaded to the Check_MK Exchange
    * 4045 FIX: Tactical Overview: do not count OK events as problems
    * 4068 FIX: Fixed possible exception in case of wrong automation secrets between multiple sites...
    * 3992 FIX: netapp_api_connection: fixed GUI display bug when editing rules

    Notifications:
    * 4042 FIX: Fix missing From address in synchronous SMTP notifications...
