@@ -30,6 +30,7 @@
 
     Multisite:
     * 4070 Added a painter for the service check period
+    * 4095 new filter host auxiliary tags
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
     * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
     * 4046 FIX: Repaired html rendering....
